remove unused method and unused import